# py-volley

./: .drone.yml  .env.example  .gitignore  .tool-versions  404.html  ATTRIBUTIONS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE.md  MAINTAINERS.md  Makefile  README.md  alerts.yaml  changelog.md  codecov.yml  codecov_metrics.sh  data-stores.yml  docker-compose.yml  example.py  index.html  infraspec.yaml  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  sonar-project.properties  test-compose.yml
.github/: CODEOWNERS  auto_assign.yml
.github/codeql/: codeql_config.yml
.github/workflows/: auto-assign.yml  auto_assign.yml  code-quality.yml  code_quality.yml  codeql-analysis.yml  integration-tests.yml  publish.yml
advanced_example/: index.html
app/: main.py
app/api/routes/: prediction.py
app/core/: config.py  event_handlers.py
app/data_models/: kafka_message.py
app/services/: interface_model.py  kafka_helper.py  post_process.py  pre_process.py  predict.py
assets/: architecture.drawio  architecture.xml  dashboard.json  grafana_ts.json
components/: base.py  collector.py  data_models.py  dummy_consumer.py  dummy_events.py  ex_opt_data.py  fallback.py  feature_generator.py  features.py  optimizer.py  publisher.py  triage.py
connectors/connectors/: index.html
connectors/kafka/: index.html
connectors/overview/: index.html
connectors/rsmq/: index.html
core/: logging.py
data_models/: prediction.py
deadletterqueue/: index.html
docs/: mkdocs.yml  tree.txt
docs/docs/: README.md  advanced_example.md  connectors.md  deadletterqueue.md  engine.md  example.md  extending.md  index.md  metrics.md  profiles.md  queue_config.md
docs/docs/connectors/: base.md  connectors.md  kafka.md  overview.md  rsmq.md
docs/docs/models/: BaseModelHandler.md  PydanticModelHandler.md  PydanticParserModelHandler.md  data_models.md  overview.md
docs/docs/serializers/: BaseSerialization.md  JsonSerialization.md  MsgPackSerialization.md  OrJsonSerialization.md  overview.md
docs/docs/stylesheets/: extra.css
engine/: component.py  config.yml  consumer.py  data_models.py  engine.py  index.html  kafka.py  producer.py  queues.py  rsmq.py
engine/connectors/: base.py  kafka.py  postgres.py  rsmq.py
engine/monitoring/: monitoring.py
engine/stateful/: pg_config.py  postgres.py
example/: README.md  comp1.py  data_models.py  external_data_consumer.py  external_data_producer.py  index.html  input_component.py  input_worker.py  kafka_kafka_worker.py  middle_worker.py  output_component.py  output_worker.py  redis_kafka_worker.py  simple.py  simple_proto.py  volley_config.yml  zmq_client.py  zmq_server.py
example/intro/: Dockerfile  app_0.py  app_1.py  docker-compose.yml  my_config.py  single_message.py
example/plugins/: my_plugin.py
example/protos/: messages.proto
examples/: README.md  redis_kafka_worker.py  volley_config.yml  zmq_server.py
examples/intro/: app_0.py  single_message.py
extending/: index.html
metrics/: index.html
models/BaseModelHandler/: index.html
models/PydanticModelHandler/: index.html
models/PydanticParserModelHandler/: index.html
models/data_models/: index.html
models/overview/: index.html
monitoring/: monitoring.py
notebooks/: publish_consume.ipynb
profiles/: index.html
queue_config/: index.html
search/: search_index.json
seed/: fp_payload.json  input_message.json
serializers/BaseSerialization/: index.html
serializers/JsonSerialization/: index.html
serializers/MsgPackSerialization/: index.html
serializers/OrJsonSerialization/: index.html
serializers/overview/: index.html
tasks/bundle_requests/: tasks.py
tasks/make_prediction/: interface_model.py  post_process.py  pre_process.py  predict.py
tasks/optimization_triage/: tasks.py
terraform/app-gcp-ml-bundle-engine-prd-central1/: backend.tf  dba.tf  ml-bundle-engine.tf  versions.tf
terraform/app-gcp-ml-bundle-engine-stg-central1/: backend.tf  dba.tf  ml-bundle-engine.tf  providers.tf  variables.tf  versions.tf
tests/: Dockerfile  Dockerfile.test  conftest.py  test_base.py  test_component.py  test_concurrency.py  test_config.py  test_engine.py  test_entry.py  test_kafka.py  test_kill.py  test_metrics.py  test_profiles.py  test_queues.py  test_rsmq.py  test_util.py
tests/fixtures/: fp_calculator_response.json  fp_service_response.json  metro_response.json  staging_example.json
tests/integration_tests/: conftest.py  test_integration.py
tests/protos/compiled/: messages_pb2.py
tests/test_api/: test_heartbeat.py  test_prediction.py
tests/test_bundle_requests/: test_bundle_tasks.py
tests/test_components/: test_components.py  test_fallback.py  test_features.py  test_optimizer.py  test_publisher.py
tests/test_connectors/: test_confluent.py  test_kafka.py  test_plugins.py  test_postgres.py  test_rsmq.py  test_zmq.py
tests/test_model_prediction/: test_models.py
tests/test_models/: test_models.py  test_proto.py  test_pydantic.py
tests/test_optmization_triage/: test_optimization_tasks.py
tests/test_serializers/: test_base.py  test_json.py  test_serializers.py
tests/test_service/: test_models.py
trained_model/: model_description.md
volley/: __init__.py  concurrency.py  config.py  config.yml  data_models.py  default_config.yml  engine.py  global.yml  logging.py  metrics.py  profiles.py  queues.py  transport.py  util.py  volley.txt
volley/connectors/: __init__.py  base.py  confluent.py  eosConfluent.py  kafka.py  postgres.py  rsmq.py  scratch.py  zmq.py
volley/engine/: transport.py
volley/models/: __init__.py  base.py  proto_model.py  pydantic_model.py
volley/monitoring/: monitoring.py
volley/serializers/: __init__.py  base.py  json_serializer.py  msgpack_serializer.py  orjson_serializer.py  pydantic.py
volley/validators/: __init__.py  base.py  pydantic_validator.py
