[tool.poetry]
name = "py_volley"
version = "0.16.0"
description = "Pluggable message queueing for Python"
authors = ["ask-machine-learning <shipt@shipt.com>"]

packages = [
    { include = "volley" },
]

[[tool.poetry.source]]
name = "shipt"
url = "https://pypi.shipt.com/simple/"
secondary = true

[tool.poetry.dependencies]
python = "^3.8,<3.11"
prometheus-client = "^0.11.0"
pydantic = "^1.8.2"
PyRSMQ = "^0.4.5"

PyYAML = "^5.4.1"
hiredis = "^2.0.0"
orjson = "^3.6.4"
msgpack = "^1.0.3"
confluent-kafka = "^1.7.0"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
coverage = "^6.0"
black = "^21.9b0"
pytest = "^6.2.5"
isort = "^5.9.3"
pydantic = "^1.8.2"
codecov = "^2.1.12"
debugpy = "^1.5.0"
pytest-cov = "^3.0.0"
types-requests = "^2.25.11"
types-pytz = "^2021.3.0"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.6"
mdx-include = "^1.4.1"
mkdocs-markdownextradata-plugin = "^0.2.4"
mkdocstrings = "^0.16.2"
psycopg2-binary = "^2.9.2"
SQLAlchemy = "^1.4.27"
pylint = "^2.12.1"
pytest-asyncio = "^0.16.0"
types-PyYAML = "^6.0.3"
types-redis = "^4.1.10"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage]
run.omit = [
    "./example/*",
    "./example.py",
    "./tests/*"
    ]
report.show_missing = true
report.fail_under = 98

[tool.black]
line-length = 120
target-version = ['py310', 'py39', 'py38']

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
markers = [
    "integration: mark a test as an integration test"
]


[tool.pylint.master]
ignore="example"

[tool.pylint.messages_control]
disable = "all"
enable = [
    "abstract-method",
    "arguments-differ",
    "differing-param-doc",
    "differing-type-doc",
    "invalid-overridden-method",
    "logging-fstring-interpolation",
    "missing-param-doc",
    "missing-raises-doc",
    "missing-return-doc",
    "missing-return-type-doc",
    "missing-yield-doc",
    "missing-yield-type-doc",
    "multiple-constructor-doc",
    "protected-access",
    "redundant-returns-doc",
    "redundant-yields-doc",
    "signature-differs",
    "super-init-not-called",
    "unused-argument",
    "unused-variable",
    "useless-object-inheritance"
]
